    * MNG demuxer
    * remove native NuppelVideo demuxer, use lavf demuxer instead

    Filters:
    * vf_ow new overcomplete wavelet denoiser
    * change vf_screenshot dependency from libpng to lavc
    * add af_scaletempo which maintains audio pitch when changing playback speed
    * fix multi-channel reordering
    * af_stats, filter to print information about the audio stream

    Streaming:
    * tv:// support for Windows
    * fix teletext on some systems
    * DVD streams can switch angles
    * DVD still menus are now supported via dvdnav://
    * allow specifying the TV standard for each channel
    * switch internal dvdread to libdvdread SVN external

    FFmpeg/libavcodec:
    * DNxHD encoder
    * H.264 PAFF decoding
    * Nellymoser ASAO decoder
    * Beam Software SIFF demuxer and decoder
    * libvorbis Vorbis decoding removed in favor of native decoder
    * IntraX8 (J-Frame) subdecoder for WMV2 and VC-1
    * Ogg (Vorbis only) muxer
    * PC Paintbrush PCX decoder
    * Sun Rasterfile decoder
    * TechnoTrend PVA demuxer
    * Linux Media Labs MPEG-4 (LMLM4) demuxer
    * AVM2 (Flash 9) SWF muxer
    * QT variant of IMA ADPCM encoder
    * iPod/iPhone compatible MP4 muxer
    * Mimic decoder
    * MSN TCP Webcam stream demuxer
    * RL2 demuxer / decoder
    * IFF demuxer
    * 8SVX audio decoder
    * BFI demuxer
    * MAXIS EA XA (.xa) demuxer / decoder
    * BFI video decoder
    * OMA demuxer
    * MLP/TrueHD decoder
    * Electronic Arts CMV decoder
    * Motion Pixels Video decoder
    * Motion Pixels MVI demuxer
    * removed animated GIF decoder/demuxer
    * D-Cinema audio muxer
    * Electronic Arts TGV decoder
    * Apple Lossless Audio Codec (ALAC) encoder
    * AAC decoder
    * floating point PCM encoder/decoder
    * MXF muxer
    * E-AC-3 support added to AC-3 decoder
    * Nellymoser ASAO encoder
    * ASS and SSA demuxer and muxer
    * liba52 wrapper removed
    * SVQ3 watermark decoding support